notesApp/scss/app.scss
@charset 'utf-8';

@import 'settings';
@import 'foundation';
@import 'motion-ui';

@include foundation-global-styles;
@include foundation-grid;
@include foundation-typography;
@include foundation-button;
@include foundation-forms;
@include foundation-visibility-classes;
@include foundation-float-classes;
@include foundation-accordion;
@include foundation-accordion-menu;
@include foundation-badge;
@include foundation-breadcrumbs;
@include foundation-button-group;
@include foundation-callout;
@include foundation-close-button;
@include foundation-drilldown-menu;
@include foundation-dropdown;
@include foundation-dropdown-menu;
@include foundation-flex-video;
@include foundation-label;
@include foundation-media-object;
@include foundation-menu;
@include foundation-off-canvas;
@include foundation-orbit;
@include foundation-pagination;
@include foundation-progress-bar;
@include foundation-slider;
@include foundation-sticky;
@include foundation-reveal;
@include foundation-switch;
@include foundation-table;
@include foundation-tabs;
@include foundation-thumbnail;
@include foundation-title-bar;
@include foundation-tooltip;
@include foundation-top-bar;

@include motion-ui-transitions;
@include motion-ui-animations;

$main-colour: #0b3454;

.header {
    background-color: $main-colour;
    color: white;
    padding: 10px 10px 10px 10px;
}

.body {
    width: 100%;
    min-height: 100%;
    background:
        linear-gradient(
            rgba(11, 50, 83, 0.8),
            rgba(11, 50, 83, 0.8)
        ),
        url("http://40.media.tumblr.com/9044db9096d16a33af8c4c84b4f809d8/tumblr_nyg9byC1331rdrn22o1_1280.jpg");
    background-size: cover;
    background-position: center;
    color: white;
}

#headline {
    word-wrap: break-word;
}

